fix span alignment styles

--- a/client/src/components/index.scss
+++ b/client/src/components/index.scss
@@ -30,7 +30,7 @@
     padding-top: 15px;
 }
 
-.release span {
+.release .releasedate {
     float: right;
 }
 
